# Blockchain-Meeting-Scheduler

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
src/BlockchainMeetingScheduler_backend/: BlockchainMeetingScheduler_backend.did  Cargo.toml
src/BlockchainMeetingScheduler_backend/src/: lib.rs
src/BlockchainMeetingScheduler_frontend/: package.json
src/BlockchainMeetingScheduler_frontend/public/: BMS_Green.png:Zone.Identifier  logo_napis_poziom_bt.png:Zone.Identifier
src/BlockchainMeetingScheduler_frontend/src/: App.jsx  index.scss  main.jsx
src/BlockchainMeetingScheduler_frontend/src/components/: About.jsx  Home.jsx  MainComponent.jsx  Meeting-Creator.jsx  Meeting-Number-Add.jsx  Meeting-Number-View.jsx  Meeting-Number.jsx  calendar.jsx  calendarCHAT.jsx  temporaryAPP.jsx
src/BlockchainMeetingScheduler_frontend/src/components/styles/: calendar.scss  meeting-number.scss
