[package]
name = "BlockchainMeetingScheduler_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
sha2 = "0.10.7"
chrono = "0.4.19"
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
wasm-bindgen = "0.2.92"
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }
